# Logging-Python

./: README.md  dados.csv  etl.py  exemplo_00.py  exemplo_01.py  exemplo_02.py  loggings_exemplo_erro.py  pipeline.py  print_decorator.py  pyproject.toml  tenacity_decorator.py  utils_log.py
