[tool.poetry]
name = "logging-python-bootcamp09"
version = "0.1.0"
description = ""
authors = ["Iasmim Horrana <horranaiasmim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
